--- a/build.gradle
+++ b/build.gradle
@@ -199,7 +199,8 @@ dependencies {
     implementation fg.deobf("com.klikli_dev:modonomicon-${mc_version}-forge:${modonomicon_version}")
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
-    implementation fg.deobf("curse.maven:primal-magick-545271:4806625")
+    //implementation fg.deobf("curse.maven:primal-magick-545271:4806625")
+    //runtimeOnly fg.deobf("curse.maven:worldedit-225608:4586218")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
