--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -34,7 +34,7 @@ logoFile="examplemod.png" #optional
 # authors="Cmdpro" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-A magic mod about manipulating souls
+A magic mod about runes
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.runology]] #optional
