--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,2 @@
-public net.minecraft.world.inventory.TransientCraftingContainer f_286998_ # menu
+public net.minecraft.world.entity.player.Inventory f_35979_ # compartments
 public net.minecraft.world.damagesource.DamageSources *()
