--- a/build.gradle
+++ b/build.gradle
@@ -202,6 +202,7 @@ dependencies {
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}:api")
     implementation fg.deobf("curse.maven:primal-magick-545271:4806625")
     runtimeOnly fg.deobf("curse.maven:worldedit-225608:4586218")
+    //implementation fg.deobf("team.lodestar.lodestone:lodestone:${mc_version}-${lodestone_version}")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
