--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public net.minecraft.world.entity.player.Inventory f_35979_ # compartments
 public net.minecraft.world.damagesource.DamageSources *()
+public net.minecraft.client.renderer.GameRenderer m_109120_(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/Camera;F)V # renderItemInHand
+public net.minecraft.client.renderer.GameRenderer f_109070_ # renderHand
