--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -74,9 +74,15 @@ A magic mod about runes
     versionRange="[1.59.0,)"
     ordering="NONE"
     side="BOTH"
+#[[dependencies.runology]]
+#    modId="curios"
+#    mandatory=true
+#    versionRange="[5.4.0+1.20.1,)"
+#    ordering="NONE"
+#    side="BOTH"
 [[dependencies.runology]]
-    modId="curios"
+    modId="lodestone"
     mandatory=true
-    versionRange="[5.4.0+1.20.1,)"
+    versionRange="[1.20.1-1.4.2.75,)"
     ordering="NONE"
     side="BOTH"
