--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,9 +17,9 @@ license="MIT License"
 # The modid of the mod
 modId="runology" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-# ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
+# ${mod_version} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="${file.jarVersion}" #mandatory
+version="${mod_version}" #mandatory
  # A display name for the mod
 displayName="Runology" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -34,8 +34,7 @@ logoFile="examplemod.png" #optional
 # authors="Cmdpro" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-A magic mod about runes
-'''
+A magic mod about runes'''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.runology]] #optional
     # the modid of the dependency
