--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 mc_version=1.20.1
 jei_version=15.2.0.27
-mod_version=1.0
+mod_version=0.1-TEST1
 modonomicon_version=1.62.0
 curios_version=5.4.0+1.20.1
 lodestone_version=1.4.2.76
