--- a/gradle.properties
+++ b/gradle.properties
@@ -17,10 +17,11 @@ loader_version_range=[4,)
 mod_id=runology
 mod_name=Runology
 mod_license=MIT License
-mod_version=1.0.0
+mod_version=2.0.0
 mod_group_id=com.cmdpro.runology
 mod_authors=Cmdpro
 mod_description=A mod about harnessing runic energy
 
 # Dependencies
 emi_version=1.1.12+1.21
+modonomicon_version=1.110.1
