--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ mod_license=MIT License
 mod_version=2.0.0
 mod_group_id=com.cmdpro.runology
 mod_authors=Cmdpro
-mod_description=A mod about harnessing runic energy
+mod_description=A mod about harnessing an otherworldly energy
 
 # Dependencies
 emi_version=1.1.12+1.21
